[tool.poetry]
name = "tours"
version = "0.1.0"
description = ""
authors = ["blessed <ytminicraftyt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-restful = "^0.3.10"
flask-cors = "^5.0.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
